fix link and restyle scrollbar

--- a/styles.scss
+++ b/styles.scss
@@ -10,11 +10,16 @@ body {
     width: 1em;
   }
   &::-webkit-scrollbar-track {
-    background-color: white;
+    background: white;
   }
   &::-webkit-scrollbar-thumb {
-    box-shadow: inset 0 0 0.25em black;
-    background-color: white;
+    background: white;
+    border: 0.25em solid lightgrey;
+    &:active,
+    &:hover {
+      border: 0.25em solid black;
+      box-shadow: 0 0 1em black;
+    }
   }
 
   @media (min-width: 992px) {
@@ -42,6 +47,8 @@ body {
 a {
   display: inline-block;
   padding: 0.5em 1em;
+  border-style: double;
+  border-width: 0.25em;
   text-decoration: none;
   user-select: none;
   cursor: pointer;
@@ -51,11 +58,11 @@ a {
     transform: scale(1.05);
   }
   &:link {
-    border: 0.25em double #1a0dab;
+    border-color: #1a0dab;
     color: #1a0dab;
   }
   &:visited {
-    border: 0.25em double #609;
+    border-color: #609;
     color: #609;
   }
 }
@@ -97,7 +104,7 @@ header div {
 
 .content {
   border: 0.25em solid black;
-  box-shadow: 0.5em 0.5em 1em black;
+  box-shadow: 0.5em 0.5em 0.5em lightgrey;
   padding: 0.5em;
   text-align: left;
 }
